--- a/css/nav.css
+++ b/css/nav.css
@@ -13,7 +13,7 @@
   display: inline-block;
   font-family: "Sofia", sans-serif;
   font-size: 35px;
-  color: #ff9900;
+  color: #4A4A4A;
   padding: 10px 10px 10px 10px;
 }
 
