--- a/css/nav.css
+++ b/css/nav.css
@@ -13,7 +13,7 @@
   display: inline-block;
   font-family: "Sofia", sans-serif;
   font-size: 35px;
-  color: #4A4A4A;
+  color: #000000;
   padding: 10px 10px 10px 10px;
 }
 
@@ -36,7 +36,7 @@
 
 /* Add hover effect */
 .nav > .nav-links > a:hover {
-  color: #ff9900; /* Change this color to whatever you want */
+  color: #008080; /* Change this color to whatever you want */
 }
 
 .nav > #nav-check {
