--- a/css/nav.css
+++ b/css/nav.css
@@ -31,7 +31,7 @@
   display: inline-block;
   padding: 20px 50px 20px 50px;
   text-decoration: none;
-  color: #efefef;
+  color: #000000;
 }
 
 /* Add hover effect */
