--- a/css/nav.css
+++ b/css/nav.css
@@ -1,7 +1,7 @@
 .nav {
   height: 70px;
   width: 100%;
-  background-color: #191970;
+  background-color: #2C3E50;
   position: relative;
 }
 
@@ -13,7 +13,7 @@
   display: inline-block;
   font-family: "Sofia", sans-serif;
   font-size: 35px;
-  color: #000000;
+  color: #FFFFFF;
   padding: 10px 10px 10px 10px;
 }
 
@@ -31,12 +31,12 @@
   display: inline-block;
   padding: 20px 50px 20px 50px;
   text-decoration: none;
-  color: #FFFDD0;
+  color: #FFFFFF;
 }
 
 /* Add hover effect */
 .nav > .nav-links > a:hover {
-  color: #DCAE96; /* Change this color to whatever you want */
+  color: #008080; /* Change this color to whatever you want */
 }
 
 .nav > #nav-check {
