--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@
 
 .content {
     padding: 20px;
-    background-color: #FFFFF0;
+    background-color: rgba(0, 0, 0, 0.5);
     border-radius: 10px;
 }
 
