--- a/css/nav.css
+++ b/css/nav.css
@@ -1,21 +1,22 @@
 .nav {
-  height: 70px;
-  width: 100%;
-  background-color: #2C3E50;
-  position: relative;
+    height: 70px;
+    width: 100%;
+    background-color: #ffffff;
+    position: relative;
 }
 
 .nav > .nav-header {
-  display: inline;
+    display: inline;
 }
 
 .nav > .nav-header > .nav-title {
-  display: inline-block;
-  font-family: "Sofia", sans-serif;
-  font-size: 35px;
-  color: #CC5500;
-  padding: 10px 10px 10px 10px;
+    display: inline-block;
+    font-family: 'Helvetica Neue', Arial, sans-serif;
+    font-size: 35px;
+    color: #333333;
+    padding: 10px;
 }
+
 
 .nav > .nav-btn {
   display: none;
