--- a/css/nav.css
+++ b/css/nav.css
@@ -1,7 +1,7 @@
 .nav {
     height: 70px;
     width: 100%;
-    background-color: #ffffff;
+    background-color: #000000;
     position: relative;
 }
 
