--- a/css/nav.css
+++ b/css/nav.css
@@ -13,7 +13,7 @@
     display: inline-block;
     font-family: 'Helvetica Neue', Arial, sans-serif;
     font-size: 35px;
-    color: #333333;
+    color: orange;
     padding: 10px;
 }
 
