--- a/css/contact.css
+++ b/css/contact.css
@@ -15,7 +15,7 @@ body {
     max-width: 1000px;
     margin: 0 auto;
     padding: 0 20px;
-    height:900px;
+    
 }
 
 h2 {
@@ -67,7 +67,7 @@ button[type="submit"] {
     padding: 12px 20px;
     border: none;
     background-color: #333;
-    color: #fff;
+    color: orange;
     font-size: 1em;
     cursor: pointer;
     transition: background-color 0.3s;
