--- a/css/contact.css
+++ b/css/contact.css
@@ -66,8 +66,8 @@ textarea {
 button[type="submit"] {
     padding: 12px 20px;
     border: none;
-    background-color: #333;
-    color: orange;
+    background-color: orange;
+    color: #fff;
     font-size: 1em;
     cursor: pointer;
     transition: background-color 0.3s;
