--- a/css/contact.css
+++ b/css/contact.css
@@ -66,7 +66,7 @@ textarea {
 button[type="submit"] {
     padding: 12px 20px;
     border: none;
-    background-color: orange;
+    background-color: #333;
     color: #fff;
     font-size: 1em;
     cursor: pointer;
@@ -75,7 +75,7 @@ button[type="submit"] {
 }
 
 button[type="submit"]:hover {
-    background-color: #555;
+    background-color: #FFAA33;
 }
 
 .contact-info {
