--- a/css/top-products.css
+++ b/css/top-products.css
@@ -19,7 +19,7 @@ main {
 .wrapper {
     flex: 1;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
 }
 
 /* Container remains centered and well-sized */
