--- a/css/top-products.css
+++ b/css/top-products.css
@@ -1,11 +1,8 @@
 .product-body {
+   height: 100%;
     margin: 0;
-    font-family: 'Helvetica Neue', Arial, sans-serif;
-    background-color: #ffffff;
-    color: #555555;
     display: flex;
     flex-direction: column;
-    align-items: center;
 }
 
 main {
