--- a/css/top-products.css
+++ b/css/top-products.css
@@ -1,17 +1,15 @@
 .product-body {
-   height: 100%;
+ height: 100%;
     margin: 0;
+    font-family: 'Helvetica Neue', Arial, sans-serif;
+    background-color: #ffffff;
+    color: #555555;
     display: flex;
     flex-direction: column;
-}
-
-main {
-    width: 100%;
-    max-width: 1200px;
-    padding: 20px;
-    display: flex;
     align-items: center;
 }
+
+
 /* Wrapper should take up the full height minus the footer */
 .wrapper {
     flex: 1;
