--- a/css/top-products.css
+++ b/css/top-products.css
@@ -5,7 +5,7 @@
     background-color: #ffffff;
     color: #555555;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
 }
 
