--- a/css/nav.css
+++ b/css/nav.css
@@ -11,7 +11,7 @@
 
 .nav > .nav-header > .nav-title {
     display: inline-block;
-    font-family: 'Helvetica Neue', Arial, sans-serif;
+    font-family: 'Playfair Display', serif;
     font-size: 35px;
     color: orange;
     padding: 10px;
