--- a/css/about.css
+++ b/css/about.css
@@ -5,40 +5,37 @@ body {
     background-color: #f9f9f9;
     color: #ffffff;
     display: flex;
-    justify-content: center;  /* Center horizontally */
-    align-items: center;      /* Center vertically */
-    height: 100vh;            /* Full viewport height */
+    flex-direction: column;
+    align-content: center;
+    
 }
+
 
 main {
     display: flex;
     flex-direction: column;
+    
     width: 100%;
-    max-width: 900px;         /* Limit the width of the main content */
     padding: 40px 20px;
     box-sizing: border-box;
-    background-color: #423f3f;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    text-align: center;       /* Center text */
 }
 
 .about {
     width: 100%;
+    max-width: 900px;
     margin-bottom: 40px;
 }   
 
 .about-container {
-    background-color: #5a5555; /* Slightly lighter */
-    color: #eaeaea; /* Lighter text for better contrast */
-    border-radius: 8px;
-    padding: 20px;
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
-    max-width: 800px;
-    margin: auto;
-    margin-top: 40px;
+    background-color: #423f3f;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
 }
-
 
 .about-image {
     width: 100%;
@@ -81,6 +78,7 @@ ul li {
 
 .team {
     width: 100%;
+    max-width: 900px;
     text-align: center;
 }
 
@@ -94,6 +92,7 @@ ul li {
 .team-member {
     background-color: #423f3f;
     border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 20px;
     max-width: 200px;
     text-align: center;
@@ -102,23 +101,8 @@ ul li {
 .team-image {
     width: 100%;
     border-radius: 10%;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
     height: 200px; /* Set a fixed height for the images */
     object-fit: cover; /* Ensures the image covers the area without stretching */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-}
-/* Media query for mobile devices */
-@media (max-width: 600px) {
-    .about-container, .team-container {
-        padding: 10px;
-    }
-
-    .team-member {
-        max-width: 100%; /* Make team member cards full-width */
-        margin-bottom: 20px; /* Add spacing between cards */
-    }
-
-    .about-image, .team-image {
-        max-width: 100%;
-        height: auto; /* Maintain aspect ratio */
-    }
+    
 }
