--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,9 @@ body {
 
 /* Add any additional styling as needed */
 
-  
+  .mainproduct{
+      height: 50px;
+      
 
   /*----------------------------------------------------------------------------------------------------------------------/*
 
