--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
 
   .mainproduct{
       height: 50px;
-      
+  }
 
   /*----------------------------------------------------------------------------------------------------------------------/*
 
