--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ p {
   
 
 .testimonials {
-    background-color: #000000cb;
+    background-color: #1E2A38;
     padding: 50px 0;
     text-align: center;
 }
