--- a/css/footer.css
+++ b/css/footer.css
@@ -1,5 +1,5 @@
 .footer {
-    background-color: #1E2A38;
+    background-color: #3B3F42;
     color: #ffffff;
     padding: 20px 0;
     text-align: center;
